--- a/OSL-CamelloBailarin/views/index.tt
+++ b/OSL-CamelloBailarin/views/index.tt
@@ -40,7 +40,7 @@
             <h3>Your application's environment</h3>
 
             <ul>
-                <li>Location: <span class="filepath">/home/germaaan/proyectos/camelloBailarin/MyWeb-App</span></li>
+                <li>Location: <span class="filepath">/home/germaaan/proyectos/camelloBailarin/master/OSL-CamelloBailarin</span></li>
                 <li>Template engine: <span class="app-info"><% settings.template %></span></li>
                 <li>Logger: <span class="app-info"><% settings.logger %></span></li>
                 <li>Environment: <span class="app-info"><% settings.environment %></span></li>
@@ -80,7 +80,7 @@
                 </tr>
                 <tr>
                     <td>Appdir</td>
-                    <td><span class="filepath">/home/germaaan/proyectos/camelloBailarin/MyWeb-App</span></td>
+                    <td><span class="filepath">/home/germaaan/proyectos/camelloBailarin/master/OSL-CamelloBailarin</span></td>
                 </tr>
                 <tr>
                     <td>Template engine</td>
@@ -128,7 +128,7 @@
               it's just here to help you get started. The template used to
               generate this content is located in
               <span class="filepath">views/index.tt</span>.
-              You can add some routes to <span class="filepath">lib/MyWeb/App.pm</span>.
+              You can add some routes to <span class="filepath">lib/OSL/CamelloBailarin.pm</span>.
               </p>
             </li>
 
