--- a/OSL-CamelloBailarin/views/layouts/main.tt
+++ b/OSL-CamelloBailarin/views/layouts/main.tt
@@ -1,17 +1,17 @@
 <!doctype html>
 <html>
 <head>
-  <title>Dancr</title>
+  <title>CamelloBailarin</title>
   <link rel=stylesheet type=text/css href="[% css_url %]">
 </head>
 <body>
   <div class=page>
-  <h1>Dancr</h1>
+  <h1>CamelloBailarin</h1>
      <div class=metanav>
      [% IF not session.logged_in %]
-       <a href="[% login_url %]">log in</a>
+       <a href="[% login_url %]">Acceder</a>
      [% ELSE %]
-       <a href="[% logout_url %]">log out</a>
+       <a href="[% logout_url %]">Salir</a>
      [% END %]
   </div>
   [% IF msg %]
