--- a/OSL-CamelloBailarin/public/css/style.css
+++ b/OSL-CamelloBailarin/public/css/style.css
@@ -4,9 +4,10 @@ margin: 0;
 margin-bottom: 25px;
 padding: 0;
 background-color: #ddd;
-background-image: url("/images/perldancer-bg.jpg");
+background-image: url("/images/osl.png");
 background-repeat: no-repeat;
-background-position: top left;
+background-attachment: fixed;
+background-position: center;
 
 font-family: "Lucida Grande", "Bitstream Vera Sans", "Verdana";
 font-size: 13px;
