Pequeños cambios en HTML

--- a/OSL-CamelloBailarin/views/data.tt
+++ b/OSL-CamelloBailarin/views/data.tt
@@ -1,11 +1,11 @@
 [% IF session.logged_in %]
   <form action="[% add_entry_url %]" method=post class=add-entry>
     <dl>
-      <dt>Title:
+      <dt>Título:
       <dd><input type=text size=30 name=title>
-      <dt>Text:
+      <dt>Texto:
       <dd><textarea name=text rows=5 cols=40></textarea>
-      <dd><input type=submit value=Share>
+      <dd><input type=submit value=Insertar>
     </dl>
   </form>
 [% END %]
@@ -15,6 +15,6 @@
     <li><h2>[% entries.$id.title %]</h2>[% entries.$id.text %]
   [% END %]
 [% ELSE %]
-  <li><em>Unbelievable.  No entries here so far</em>
+  <li><em>No hay ninguna entrada en la base de datos</em>
 [% END %]
 </ul>
