--- a/OSL-CamelloBailarin/views/login.tt
+++ b/OSL-CamelloBailarin/views/login.tt
@@ -2,7 +2,7 @@
 [% IF err %]<p class=error><strong>Error:</strong> [% err %][% END %]
 <form action="[% login_url %]" method=post>
   <dl>
-    <dt>Username:
+    <dt>Usuario:
     <dd><input type=text name=username>
     <dt>Password:
     <dd><input type=password name=password>
