--- a/OSL-CamelloBailarin/public/css/style.css
+++ b/OSL-CamelloBailarin/public/css/style.css
@@ -2,7 +2,7 @@
 body {
 margin: 0;
 margin-bottom: 25px;
-padding: 0;
+padding: 25px;
 background-color: #ddd;
 background-image: url("/images/osl.png");
 background-repeat: no-repeat;
